Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14355

LustreError: 3782:0:(sec.c:411:import_sec_validate_get()) import ffff8dff56545800 (CONNECTING) with no sec

XMLWordPrintable

    • 3
    • 9223372036854775807

      Error report on a number of clients.

      Jan 21 08:08:29 r633i7n12 kernel: [1611245309.088073] LustreError: 4495:0:(sec.c:411:import_sec_validate_get()) import ffff9e8a7f176000 (CONNECTING) with no sec
      Jan 21 08:08:29 r633i7n12 kernel: [1611245309.088073] LustreError: 4495:0:(sec.c:411:import_sec_validate_get()) Skipped 2 previous similar messages
      Jan 21 08:08:30 r635i0n0 kernel: [1611245310.268045] LustreError: 3481:0:(sec.c:411:import_sec_validate_get()) import ffff98740d118800 (CONNECTING) with no sec
      Jan 21 08:08:30 r635i0n0 kernel: [1611245310.268045] LustreError: 3481:0:(sec.c:411:import_sec_validate_get()) Skipped 2 previous similar messages
      Jan 21 08:09:34 r635i1n2 kernel: [1611245374.082957] LustreError: 3782:0:(sec.c:411:import_sec_validate_get()) import ffff8dff56545800 (CONNECTING) with no sec
      
       

            sebastien Sebastien Buisson
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: